# agentcore-cli

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  BETA_TESTING_GUIDE.md  CHANGELOG.md  LOCAL_DEV_SETUP.md  README.md  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.unit.config.ts
.github/: dependabot.yml
.github/harness/: Dockerfile  README.md  harness_review.py
.github/harness/prompts/: review.md  system.md
.github/scripts/prompts/: review.md  system.md
.github/scripts/python/: harness_review.py
.github/workflows/: build-and-test.yml  codeql.yml  e2e-tests-full.yml  e2e-tests-weekly.yml  e2e-tests.yml  lint.yml  peer-dep-compat.yml  pr-ai-review.yml  pr-size.yml  pr-tarball.yml  pr-title.yml  release-main-and-preview.yml  release.yml  slack-issue-notification.yml  slack-open-prs-notification.yml  sync-from-public.yml  sync-preview.yml
.husky/: pre-commit
.omc/sessions/: 26498a12-f26a-43b7-b89d-131ac995aa62.json  43db174c-d800-4e28-8ac9-f1e39aa6aa7f.json  4971c61c-9a8f-4475-b164-105c601d2fba.json  4dd2cc49-8d18-4168-8460-acacf125e650.json  e9773b37-7fb9-4794-bd18-beca59e15738.json
.omc/state/: agent-replay-00abd583-2ef0-45e8-9134-f395ce6d5bbe.jsonl  agent-replay-9423878a-39c1-4869-87f0-0f8a3910890b.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
agents/devex_doc_writer/: README.md  SYSTEM.md  main.py
agents/devex_doc_writer/archetypes/: new-resource.md  scope-widening.md
agents/devex_doc_writer/examples/: config-bundle-input.yaml
agents/devex_doc_writer/inputs/: schema.yaml
agents/devex_doc_writer/prompts/: self_reviewer.md  writer.md
agents/devex_doc_writer/reference-devex-docs/: eval-feature-overview.md  runtime-endpoint-design.md
agents/devex_doc_writer/templates/: implementation-plan.md  new-resource-devex.md  scope-widening-devex.md
agents/knowledge/: .gitignore  cdk-architecture-snapshot.yaml  cli-architecture-snapshot.yaml  package-lock.json  package.json  refresh.ts  tsconfig.json
agents/knowledge/extractors/: commands.ts  deploy-flow.ts  primitives.ts  schema.ts
browser-tests/: constants.ts  fixtures.ts  global-setup.ts  global-teardown.ts  playwright.config.ts
browser-tests/tests/: chat-invocation.test.ts  inspector-loads.test.ts  resources.test.ts  start-agent.test.ts  traces.test.ts
docs/: PERMISSIONS.md  TESTING.md  batch-evaluation.md  commands.md  config-bundles.md  configuration.md  container-builds.md  evals.md  frameworks.md  gateway.md  individual-memory-deployment-plan.md  local-development.md  memory.md  recommendations.md  release-process.md  transaction_search.md  tui-harness.md
docs/policies/: iam-policy-user.json
docs/superpowers/plans/: 2026-04-21-harness-custom-jwt-auth.md
e2e-tests/: ab-test-config-bundle.test.ts  ab-test-target-based.test.ts  byo-custom-jwt.test.ts  config-bundle-eval-rec.test.ts  container-strands-bedrock.test.ts  e2e-helper.ts  evals-lifecycle.test.ts  googleadk-gemini.test.ts  harness-bedrock.test.ts  harness-e2e-helper.ts  harness-gemini.test.ts  harness-openai.test.ts  http-gateway-targets.test.ts  import-gateway.test.ts  import-resources.test.ts  langgraph-anthropic.test.ts  langgraph-bedrock.test.ts  langgraph-gemini.test.ts  langgraph-openai.test.ts  openaiagents-openai.test.ts  strands-anthropic.test.ts  strands-bedrock.test.ts  strands-gemini.test.ts  strands-openai.test.ts
e2e-tests/fixtures/import/: common.py  (+5 more)
integ-tests/: README.md  add-agent-auth.test.ts  add-remove-ab-test-target-based.test.ts  add-remove-ab-test.test.ts  add-remove-config-bundle.test.ts  add-remove-evaluator.test.ts  add-remove-gateway.test.ts  add-remove-harness.test.ts  add-remove-online-eval-endpoint.test.ts  add-remove-policy.test.ts  add-remove-resources.test.ts  create-frameworks.test.ts  create-memory.test.ts  create-no-agent.test.ts  create-protocols.test.ts  create-with-agent.test.ts  deploy.test.ts  dev-server.test.ts  help.test.ts  invoke-agent.test.ts  lifecycle-config.test.ts  recommendation.test.ts
integ-tests/tui/: add-gateway-jwt.test.ts  helpers.ts  lifecycle-config.test.ts  setup.ts
package/: package.json
schemas/: README.md  agentcore.schema.v1.json
scripts/: bump-version.ts  bundle.mjs  check-old-cli.lib.mjs  check-old-cli.mjs  check-peer-dep-compat.mjs  copy-assets.mjs  generate-schema.mjs
src/: index.ts
src/assets/: README.md
src/assets/python/a2a/strands/base/: pyproject.toml
src/assets/python/autogen/base/: README.md  pyproject.toml
src/assets/python/crewai/base/: README.md  main.py  pyproject.toml
src/assets/python/crewai/base/model/: load.py
src/assets/python/googleadk/base/: README.md  main.py  pyproject.toml
src/assets/python/googleadk/base/mcp_client/: client.py
src/assets/python/langchain_langgraph/base/: README.md  main.py  pyproject.toml
src/assets/python/langchain_langgraph/base/mcp_client/: client.py
src/assets/python/openaiagents/base/: README.md  main.py  pyproject.toml
src/assets/python/openaiagents/base/mcp_client/: client.py
src/assets/python/strands/base/: README.md  main.py  pyproject.toml
src/assets/python/strands/base/mcp_client/: client.py
src/assets/static/strands-bedrock/: pyproject.toml
src/cli/: AGENTS.md  cli.ts  errors.ts  project.ts  update-notifier.ts
src/lib/: constants.ts  index.ts
src/schema/: AGENTS.md  constants.ts
src/test-utils/: README.md  cli-runner.ts  config-reader.ts  fs-helpers.ts  index.ts  project-factory.ts  telemetry-helper.ts
src/tui-harness/: helpers.ts  index.ts
web-harness/: AGENTS.md  README.md  browser-entry.tsx  cli-constants-mock.ts  cli-mock.ts  cli-schema-mock.ts  external-mocks.ts  harness-env.ts  index.html  ink-browser-shim.tsx  ink-spinner-shim.tsx  lib-mocks.ts  mock-fs-client.ts  mock-fs-server.ts  nl-edit-mock.ts  node-mocks.ts  package-lock.json  package.json  schema-assets-mock.ts  shell-mock.ts  template-root-mock.ts  test-harness.mjs  test-writable-fs.mjs  tsconfig.json  tui-process-mock.ts  vite.config.ts
(+776 files in other folders)
