[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using AutoGen SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat >= 0.7.5",
    "autogen-ext[mcp] >= 0.7.5",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "bedrock-agentcore >= 1.0.3",
    "python-dotenv >= 1.0.1",
    "tiktoken",
{{#if (eq modelProvider "Bedrock")}}
    "autogen-ext[anthropic] >= 0.7.5",
{{/if}}
{{#if (eq modelProvider "Anthropic")}}
    "autogen-ext[anthropic] >= 0.7.5",
{{/if}}
{{#if (eq modelProvider "OpenAI")}}
    "autogen-ext[openai] >= 0.7.5",
{{/if}}
{{#if (eq modelProvider "Gemini")}}
    "autogen-ext[openai] >= 0.7.5",
{{/if}}
]

[tool.hatch.build.targets.wheel]
packages = ["."]
