[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using CrewAI SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "python-dotenv >= 1.0.1",
{{#if (eq modelProvider "Bedrock")}}
    "crewai[tools,bedrock] >= 1.3.0",
{{/if}}
{{#if (eq modelProvider "Anthropic")}}
    "crewai[tools,anthropic] >= 1.3.0",
{{/if}}
{{#if (eq modelProvider "OpenAI")}}
    "crewai[tools,openai] >= 1.3.0",
{{/if}}
{{#if (eq modelProvider "Gemini")}}
    "crewai[tools,google-genai] >= 1.3.0",
{{/if}}
]

[tool.hatch.build.targets.wheel]
packages = ["."]
