[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "google-adk >= 1.17.0",
    "bedrock-agentcore >= 1.0.3",
    "python-dotenv >= 1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
