[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain >= 1.0.3",
    "tiktoken == 0.11.0",
    "bedrock-agentcore >= 1.0.3",
    "python-dotenv >= 1.0.1",
{{#if (eq modelProvider "Bedrock")}}
    "langchain-aws >= 1.0.0",
{{/if}}
{{#if (eq modelProvider "Anthropic")}}
    "langchain-anthropic >= 1.1.0",
{{/if}}
{{#if (eq modelProvider "OpenAI")}}
    "langchain-openai >= 1.0.3",
{{/if}}
{{#if (eq modelProvider "Gemini")}}
    "langchain-google-genai >= 3.0.3",
{{/if}}
]

[tool.hatch.build.targets.wheel]
packages = ["."]
