[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "openai-agents >= 0.4.2",
    "bedrock-agentcore >= 1.0.3",
    "python-dotenv >= 1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
