[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic >= 0.30.0",
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    "bedrock-agentcore >= 1.0.3",
    "google-generativeai >= 0.5.0",
    "openai >= 1.0.0",
    "python-dotenv >= 1.0.1",
    "strands-agents >= 1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
