[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    {{#if (eq modelProvider "Anthropic")}}"anthropic >= 0.30.0",
    {{/if}}"aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    {{#if (eq modelProvider "Gemini")}}"google-genai >= 1.0.0",
    {{/if}}"mcp >= 1.19.0",
    {{#if (eq modelProvider "OpenAI")}}"openai >= 1.0.0",
    {{/if}}"strands-agents >= 1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
